--- a/hwhc-markdown.Rmd
+++ b/hwhc-markdown.Rmd
@@ -79,10 +79,10 @@ Full details of these schemes are available on the [NHS Help with Health Costs w
 
 Six different certificate schemes are available, with different levels of help with health costs:
 
-* [Maternity exemption certificate](https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/maternity-exemption-certificates)
-* [Medical exemption certificate](https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/medical-exemption-certificates)
-* [NHS Tax credit exemption certificate](https://www.nhsbsa.nhs.uk/exemption-certificates/nhs-tax-credit-exemption-certificates)
-* [NHS Low Income Scheme (LIS)](https://www.nhsbsa.nhs.uk/nhs-low-income-scheme)
+* [Maternity exemption certificates](https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/maternity-exemption-certificates)
+* [Medical exemption certificates](https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/medical-exemption-certificates)
+* [NHS Tax Credit Exemption Certificates](https://www.nhsbsa.nhs.uk/exemption-certificates/nhs-tax-credit-exemption-certificates)
+* [NHS Low Income Scheme](https://www.nhsbsa.nhs.uk/nhs-low-income-scheme)
 * [NHS Prescription Prepayment certificate     (PPC)](https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-prescription-prepayment-certificate-ppc)
 * [NHS Hormone Replacement Therapy Prescription Prepayment Certificate (HRT     PPC)](https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-hormone-replacement-therapy-prescription-prepayment-certificate-hrt-ppc)"
 , width = "100%")`
@@ -99,9 +99,9 @@ The number of certificates issued has risen following a drop between 2019/20 and
 
 The number of certificates issued typically rises with age.
 
-### NHS tax credit exemption certificates {.toc-ignore}
+### NHS Tax Credit Exemption Certificates {.toc-ignore}
 
-The number of NHS tax credit exemption certificates has been declining for a number of years. As part of the Universal Credit rollout people are being migrated away from tax credits and onto new benefit schemes. In 2023/24, 1.2 million certificates were issued, compared to 3.7 million in 2018/19.
+The number of certificates issued has been declining for a number of years. As part of the Universal Credit rollout people are being migrated away from tax credits and onto new benefit schemes. In 2023/24, 1.2 million certificates were issued, compared to 3.7 million in 2018/19.
 
 The age profile of recipients has changed over the past few years. In 2018/19, 55% of certificates were issued to people aged under 40 years old but in 2023/24 this has dropped to 30% of issued certificates.
 
@@ -121,7 +121,7 @@ The number of PPCs issued is slightly lower in the most and least deprived areas
 
 ### NHS Hormone Replacement Therapy Prescription Prepayment Certificate (HRT PPC) {.toc-ignore}
 
-The HRT PPC was launched in April 2023, with 131,000 certificates being issued in the first month. This represents 23% of the 566,000 certificates issued in 2023/24.
+The HRT PPC was introduced on 1 April 2023, with 131,000 certificates being issued in the first month. This represents 23% of the 566,000 certificates issued in 2023/24.
 
 The number of certificates issued was higher in less deprived areas.
 
@@ -140,7 +140,7 @@ These statistics are based on information from applications and data captured du
 
 Figures are presented based on the number of applications and issued certificates. Figures should not be interpreted as numbers of people as a unique individual could be represented multiple times.
 
-The NHS Low Income Scheme and NHS tax credit exemption certificate provide certificates to people across the United Kingdom whilst the other NHS Help with Health Costs services administered by NHSBSA are typically focused on support for residents in England. Within this report figures represent all activity, with additional breakdowns by country available in the supporting datasets.
+The NHS Low Income Scheme and NHS Tax Credit Exemption Certificates provide support to people across the United Kingdom whilst the other NHS Help with Health Costs services administered by NHSBSA are typically focused on support for residents in England. Within this report figures represent all activity, with additional breakdowns by country available in the supporting datasets.
 
 Integrated Care Board (ICB) areas have been used within this narrative to allow comparisons between areas. Applicants are aligned to an ICB area based on their postcode and mappings available using the [National Statistics Postcode Lookup (NSPL) - May 2024](https://geoportal.statistics.gov.uk/datasets/521edce4159a451a932539b7fc786322/about).
 
@@ -150,9 +150,9 @@ Integrated Care Board (ICB) areas have been used within this narrative to allow 
 
 ### 2.1 Maternity exemption certificate
 
-`r infoBox_border("",text = "Maternity exemption certificates exempt the holders from NHS prescription charges. They can also be used as proof of entitlement to free NHS dental treatment.
+`r infoBox_border("",text = "Maternity exemption certificates exempt the holders from NHS prescription charges. They can also be used as proof of entitlement to free NHS dental treatment whilst pregnant.
 
-Maternity exemption certificates are available to anybody who is currently pregnant, or has given birth in the last 12 months. The certificate is valid until 12 months after the birth of the baby.
+Maternity exemption certificates are available to anybody who is currently pregnant, or has given birth in the last 12 months. The certificate is valid until 12 months from the baby's due date or the birth of the baby.
 
 Applications are submitted via a midwife, doctor or health visitor who confirms eligibility. Both paper and digital applications are available. 
 
@@ -362,7 +362,7 @@ Cheshire and Merseyside ICB had the lowest estimated number of certificates issu
 
 ### 2.2 Medical exemption certificate
 
-`r infoBox_border("",text = "Medical exemption certificates exempt the holders from NHS prescription charges only. Patients with any of the qualifying conditions can apply for a certificate. But it is the certificate that provides exemption - not the condition.
+`r infoBox_border("",text = "Medical exemption certificates exempt the holders from NHS prescription charges only. Patients with any of the qualifying conditions can apply for a certificate. It is the certificate that provides exemption - not the condition.
 
 Patients can apply for a medical exemption certificate if they have either:
 
@@ -380,7 +380,7 @@ Patients can apply for a medical exemption certificate if they have either:
   * the effects of cancer
   * the effects of cancer treatment
 
-A GP or doctor provides the application form to qualifying patients. Medical exemption certificates are usually valid for 5 years. Certificates will not be automatically renewed upon expiration, with certificate holders needing to reapply.
+Applications are submitted via a GP or doctor who confirms eligibility. Medical exemption certificates are usually valid for 5 years. Certificates will not be automatically renewed upon expiration, with certificate holders needing to reapply.
 
 Only a small proportion of applications would not end with a certificate being issued. Certificates may not be issued if essential details cannot be confirmed by the applicant or other issues cannot be resolved. Due to the time taken to resolve an application, some certificates may be issued in a later time period to when the application was submitted.
 
@@ -553,9 +553,9 @@ There is not a large variation between ICBs. Values range from 220 certificates 
 
 ------------------------------------------------------------------------
 
-### 2.3 NHS tax credit exemption certificates
+### 2.3 NHS Tax Credit Exemption Certificates
 
-`r infoBox_border("",text = "NHS tax credit exemption certificates provide support for:
+`r infoBox_border("",text = "NHS Tax Credit Exemption Certificates provide support for:
 
 * free NHS prescriptions
 * free NHS dental treatment
@@ -570,12 +570,12 @@ There is no application process as HM Revenue and Customs will identify who is e
 * Working Tax Credit and Child Tax Credit paid together
 * Working Tax Credit including a disability or severe disability element
 
-Certificates are valid for 7 months, and issued every 6 months in April and September.
+Certificates are valid for up to 7 months.
 
 The majority of activity is for certificates issued to people in England, however certificates are also processed for people from Scotland, Wales and Northern Ireland."
 , width = "100%")`
 
-#### Number of NHS tax credit exemption certificates issued 2018/19 to 2023/24 {.tabset}
+#### Number of NHS Tax Credit Exemption Certificates issued 2018/19 to 2023/24 {.tabset}
 
 <div class = "tabset">
 
@@ -589,7 +589,7 @@ The majority of activity is for certificates issued to people in England, howeve
 
 ###### Figure 9: The number of certificates issued has been dropping year on year
 
-Number of NHS tax credit exemption certificates issued from 2018/19 to 2023/24
+Number of NHS Tax Credit Exemption Certificates issued from 2018/19 to 2023/24
 
 ```{r tax_issued_chart}
 tax_issued_objs$chart |> 
@@ -601,7 +601,7 @@ get_download_button(title = "Download chart data", data = tax_issued_objs$chart_
 
 ###### Table 9: The number of certificates issued has been dropping year on year
 
-Number of NHS tax credit exemption certificates issued by financial year from 2018/19 to 2023/24
+Number of NHS Tax Credit Exemption Certificates issued by financial year from 2018/19 to 2023/24
 
 ```{r tax_issued_table}
 tax_issued_objs$table
@@ -610,9 +610,9 @@ get_download_button(title = "Download table data", data = tax_issued_objs$chart_
 
 </div>
 
-The number of issued Tax Credit Exemption Certificates has been dropping year on year from 3.7 million in 2018/19 to 1.2 million in 2023/24. As part of the Universal Credit roll-out people are being migrated to new benefit schemes which will reduce the number of people in receipt of tax credits. The number of certificates issued each year has declined by between 22% and 26% since 2019/2020.
+The number of issued NHS Tax Credit Exemption Certificates has been dropping year on year from 3.7 million in 2018/19 to 1.2 million in 2023/24. As part of the Universal Credit roll-out people are being migrated to new benefit schemes which will reduce the number of people in receipt of tax credits. The number of certificates issued each year has declined by between 22% and 26% since 2019/2020.
 
-#### Number of NHS tax credit exemption certificates issued, split by age band of applicant 2023/24 {.tabset}
+#### Number of NHS Tax Credit Exemption Certificates issued, split by age band of applicant 2023/24 {.tabset}
 
 <div class = "tabset">
 
@@ -626,7 +626,7 @@ The number of issued Tax Credit Exemption Certificates has been dropping year on
 
 ###### Figure 10: The number of certificates issued peaks at age 40-44
 
-Number of NHS tax credit exemption certificates issued in 2023/24, split by age of applicant
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, split by age of applicant
 
 ```{r tax_age_chart}
 tax_age_objs$chart
@@ -637,7 +637,7 @@ get_download_button(title = "Download chart data", data = tax_age_objs$chart_dat
 
 ###### Table 10: The number of certificates issued peaks at age 40-44
 
-Number of NHS tax credit exemption certificates issued in 2023/24, split by age of applicant
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, split by age of applicant
 
 ```{r tax_age_table}
 tax_age_objs$table
@@ -646,13 +646,13 @@ get_download_button(title = "Download table data", data = tax_age_objs$chart_dat
 
 </div>
 
-The number of Tax Credit Exemption Certificates issued in 2023/24 peaked at ages 40-44 with 268,000 certificates issued.
+The number of NHS Tax Credit Exemption Certificates issued in 2023/24 peaked at ages 40-44 with 268,000 certificates issued.
 
 Over three-quarters of all certificates were issued to people aged between 35 and 54.
 
-Although numbers are relatively small, some certificates are issued to people aged 60 and over as Tax Credit Exemption Certificate also provides support with some health costs which do not have an age exemption.
+Although numbers are relatively small, some certificates are issued to people aged 60 and over as certificates also provide support with some health costs which do not have an age exemption.
 
-#### Number of NHS tax credit exemption certificates issued by deprivation profile 2023/24 {.tabset}
+#### Number of NHS Tax Credit Exemption Certificates issued by deprivation profile 2023/24 {.tabset}
 
 <div class = "tabset">
 
@@ -666,7 +666,7 @@ Although numbers are relatively small, some certificates are issued to people ag
 
 ###### Figure 11: Certificates are most commonly issued to the most deprived areas
 
-Number of NHS tax credit exemption certificates issued in 2023/24, split by IMD quintile
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, split by IMD quintile
 
 ```{r tax_imd_chart}
 tax_imd_objs$chart
@@ -677,7 +677,7 @@ get_download_button(title = "Download chart data", data = tax_imd_objs$chart_dat
 
 ###### Table 11: Certificates are most commonly issued to the most deprived areas
 
-Number of NHS tax credit exemption certificates issued in 2023/24, split by IMD quintile
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, split by IMD quintile
 
 ```{r tax_imd_table}
 tax_imd_objs$table
@@ -688,9 +688,9 @@ get_download_button(title = "Download table data", data = tax_imd_objs$chart_dat
 
 The English Indices of Deprivation provide a measure of deprivation. These indices of deprivation are specific to England and therefore can only be applied to certificates that can be assigned to an English address.
 
-There is a strong relationship between deprivation and number of NHS tax credit exemption certificates issued. This is to be expected as this is a means-tested benefit. In 2023/24, there were 394,000 certificates issued in the most deprived areas. In the least deprived areas only 67,800 certificates were issued in 2023/24.
+There is a strong relationship between deprivation and number of NHS Tax Credit Exemption Certificates issued. This is to be expected as this is a means-tested benefit. In 2023/24, there were 394,000 certificates issued in the most deprived areas. In the least deprived areas only 67,800 certificates were issued in 2023/24.
 
-#### Number of NHS tax credit exemption certificates issued per 10,000 population, by ICB 2023/24 {.tabset}
+#### Number of NHS Tax Credit Exemption Certificates issued per 10,000 population, by ICB 2023/24 {.tabset}
 
 <div class = "tabset">
 
@@ -698,7 +698,7 @@ There is a strong relationship between deprivation and number of NHS tax credit 
 
 ###### Figure 12 (map): Certificates issued per 10,000 population varies by ICB area
 
-Number of NHS tax credit exemption certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
 
 ```{r tax_icb_map}
 tax_icb_objs$map
@@ -709,7 +709,7 @@ get_download_button(title = "Download map data", data = tax_icb_objs$chart_data,
 
 ###### Figure 12 (chart): Certificates issued per 10,000 population varies by ICB area
 
-Number of NHS tax credit exemption certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
 
 ```{r tax_icb_chart}
 tax_icb_objs$chart
@@ -720,7 +720,7 @@ get_download_button(title = "Download chart data", data = tax_icb_objs$chart_dat
 
 ###### Table 12: Certificates issued per 10,000 population varies by ICB area
 
-Number of NHS tax credit exemption certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
+Number of NHS Tax Credit Exemption Certificates issued in 2023/24, within ICB areas, per 10,000 population aged 16 and over
 
 ```{r tax_icb_table}
 tax_icb_objs$table
@@ -729,9 +729,9 @@ get_download_button(title = "Download table data", data = tax_icb_objs$chart_dat
 
 </div>
 
-ICB areas have been used to allow comparisons between areas, however ICBs are not responsible for NHS tax credit exemption certificates. Applicants have been associated with an ICB area based on their postcode, which is only possible for people within England.
+ICB areas have been used to allow comparisons between areas, however ICBs are not responsible for NHS Tax Credit Exemption Certificates. Applicants have been associated with an ICB area based on their postcode, which is only possible for people within England.
 
-Population estimates use figures published by [Office for National Statistics for ICB population](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates). These figures are mid-year estimates with 2022 population estimates used for this report. This is the latest available population statistics at the time of publication. To align with NHS tax credit exemption certificates, population figures are based on the population aged 16 and over.
+Population estimates use figures published by [Office for National Statistics for ICB population](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates). These figures are mid-year estimates with 2022 population estimates used for this report. This is the latest available population statistics at the time of publication. To align with NHS Tax Credit Exemption Certificates, population figures are based on the population aged 16 and over.
 
 There are a small number of ICBs where the number of certificates per 10,000 population is much higher than the rest of the country.
 
@@ -743,7 +743,7 @@ In 2023/24, Bath and North East Somerset, Swindon and Wiltshire ICB had the lowe
 
 ### 2.4 NHS Low Income Scheme
 
-`r infoBox_border("",text = "The NHS Low Income Scheme (LIS) provides income related help. Support is available for people who do not receive help with health costs via an existing exemption. This is a means tested benefit, but also considers council tax and housing costs.
+`r infoBox_border("",text = "The NHS Low Income Scheme provides income related help. Support is available for people who do not receive help with health costs via an existing exemption.
 
 NHS Low Income Scheme exemption provides help with:
 
@@ -772,7 +772,7 @@ These statistics exclude any figures for certificates issued to asylum seekers a
 :::
 :::
 
-Applicants either complete a paper HC1 form or apply via the [online application for LIS](https://apply-for-help-with-nhs-costs.nhsbsa.nhs.uk/apply-online). Two levels of support are available from the NHS Low Income Scheme. Depending on the outcome of the assessment, applicants could receive:
+Applicants either complete a paper HC1 form or apply via the [online application for NHS Low Income Scheme](https://apply-for-help-with-nhs-costs.nhsbsa.nhs.uk/apply-online). Two levels of support are available from the NHS Low Income Scheme. Depending on the outcome of the assessment, applicants could receive:
 
 * an [HC2 certificate](https://www.nhsbsa.nhs.uk/nhs-low-income-scheme/hc2-certificates-full-help-health-costs) for full help with health costs, including free NHS prescriptions
 * an [HC3 certificate](https://www.nhsbsa.nhs.uk/nhs-low-income-scheme/hc3-certificates-limited-help-health-costs) for limited help with health costs, which will show how much the holder has to pay towards health costs
@@ -951,7 +951,7 @@ Bath and North East Somerset, Swindon and Wiltshire ICB had the lowest estimated
 
 ### 2.5 NHS Prescription Prepayment Certificate (PPC)
 
-`r infoBox_border("",text = "A PPC can help provide savings for people who pay for NHS Prescriptions. The certificate covers all a patient's NHS prescription charges for a set price. Patients will save money if they need 4 or more items in 3 months or 12 or more items in 12 months.
+`r infoBox_border("",text = "A PPC can help provide savings for people who pay for their NHS Prescriptions. The certificate covers all NHS prescription charges for a set price. Patients could save money if they need 4 or more items in 3 months or 12 or more items in 12 months.
 
 PPCs can be purchased in-person at some pharmacies or direct via the [PPC webpage](https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-prescription-prepayment-certificate-ppc). Applicants can choose between a 3-month and 12-month certificate.
 
@@ -1132,11 +1132,11 @@ Lincolnshire ICB had the highest figure in 2023/24, with 2,659 certificates issu
 
 ------------------------------------------------------------------------
 
-### 2.6 NHS Hormone Replacement Therapy Prescription Prepayment Certificate (HRT PPC)
+### 2.6 HRT PPC
 
-`r infoBox_border("",text = "The HRT PPC was introduced in April 2023 to provide support with the prescription costs for medication used to treat symptoms of the menopause. 
+`r infoBox_border("",text = "The HRT PPC was introduced on 1 April 2023 to provide support with the prescription costs for medication used to treat symptoms of the menopause. 
 
-A HRT PPC covers all a patient's NHS prescription charges, for certain HRT medicines, for a set price. HRT PPCs are valid for 12 months and patients will save money if they need 3 or more HRT prescription items in 12 months.
+The HRT PPC covers all NHS prescription charges for certain HRT medicines for a set price. HRT PPCs are valid for 12 months and patients could save money if they need 3 or more HRT prescription items in 12 months.
 
 The HRT PCC can be used for any of the applicable HRT medicines, regardless of why they are prescribed. The HRT PPC webpages include a [list of the medicines covered by a HRT PPC](https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-hormone-replacement-therapy-prescription-prepayment-certificate-hrt-ppc/medicines-covered-hrt-ppc).
 
@@ -1144,7 +1144,7 @@ HRT PPCs can be purchased in-person at some pharmacies or direct via the [HRT PP
 
 Only a small proportion of applications would not end with a certificate being issued. Certificates will not be issued if there are issues with the initial payment for the certificate and in some cases the applicant may drop out for other reasons. Due to the time taken to resolve an application, some certificates may be issued in a later time period to when the application was submitted.
 
-Patients receiving prescriptions for other medicines, including HRT medicines not covered by the HRT PPC, may benefit more from a 3 or 12 month Prescription Prepayment Certificate (PPC) that covers all NHS prescriptions.
+If a patient's medication is not covered, or they also receive prescriptions for other medication, they may benefit more from a 3 or 12 month PPC that covers all NHS prescriptions.
 
 As a HRT PPC provides support with NHS prescription charges, support is generally only applicable to applicants from England aged between 16 and 59."
 , width = "100%")`
